# PAMSI

Projekt1/: .gitignore  CMakeLists.txt  main.cpp
Projekt1/data/: loremIpsumAverage.txt  loremIpsumSmall.txt  projekt1.txt
Projekt1/inc/: DisplayFunction.hpp  DoublyLinkedList.hpp  Iterator.hpp  MyDoublyLinkedList.hpp  MyPriorityQueue.hpp  Node.hpp  PriorityQueue.hpp
Projekt1/src/: DisplayFunction.cpp  DoublyLinkedList.cpp  Iterator.cpp  MyDoublyLinkedList.cpp  MyPriorityQueue.cpp  Node.cpp  PriorityQueue.cpp  main.cpp
Projekt1/test/: MainTest.cpp  Test.cpp
Projekt2/: CMakeLists.txt
Projekt2/inc/: DisplayFunction.hpp  MyDoublyLinkedList.hpp  Node.hpp  SortingAlgorithms.hpp
Projekt2/src/: DisplayFunction.cpp  Iterator.cpp  MyDoublyLinkedList.cpp  Node.cpp  SortingAlgorithms.cpp  main.cpp
Projekt2/test/: Test.cpp
Projekt3/: CMakeLists.txt
Projekt3/inc/: GameLogic.hpp  Matrix.hpp
Projekt3/src/: GameLogic.cpp  Matrix.cpp  main.cpp
Projekt3/test/: MainTest.cpp  Test.cpp
